--- a/client/pages/home/home.wxml
+++ b/client/pages/home/home.wxml
@@ -1,2 +1,19 @@
-<!--pages/home/home.wxml-->
-<text>pages/home/home.wxml</text>
+<view class="close" wx:if="{{selectedMovie}}" bindtap="close">x</view>
+<swiper style="height: {{swiperHeight}}rpx">
+  <block wx:for="{{movieList}}" wx:key="id" wx:for-item="movie">
+    <swiper-item>
+      <view animation="{{pressedAnimation}}" class="recommend-wrapper {{selectedMovie? 'animate' : ''}}">
+        <!-- <view class="close" wx:if="{{activedMovieId === 1}}">x</view> -->
+        <view class="movie-info" bindtouchstart="pressed" bindtouchmove="touchMove" bindtouchcancel="touchMove" bindtouchend="touchEnd">
+          <image class="movie-image" mode="widthFix" src="../../images/user-unlogin.png"></image>
+          <view class="movie-title">{{movie.title}}</view>
+        </view>
+
+        <view class="recommend-info">
+          <image class="avator" src="../../images/user-unlogin.png"></image>
+          <view class="content">超级好的的电影，赞赞赞</view>
+        </view>
+      </view>
+    </swiper-item>
+  </block>
+</swiper>
