--- a/client/pages/movie-detail/movie-detail.wxss
+++ b/client/pages/movie-detail/movie-detail.wxss
@@ -1,1 +1,57 @@
 /* pages/movie-detail/movie-detail.wxss */
+.movie-wrapper {
+  position: relative; 
+  margin: 128rpx 32rpx 64rpx;
+  background: #eee;
+  padding: 32rpx 64rpx;
+}
+
+.movie-info {
+  position: relative;
+  top: -100rpx;
+  left: 0;
+  right: 0;
+  text-align: center;
+}
+
+.movie-image {
+  width: 300rpx;
+  border: 1px solid black;
+  margin: 0 auto;  
+
+}
+
+.movie-title {
+  text-align: center;
+  font-size: 40rpx;
+  line-height: 56rpx;
+}
+
+.movie-description {
+  margin: 32rpx 0;
+  font-size: 30rpx;
+  line-height: 60rpx;
+  text-align: start;
+  color: #637782;
+
+
+}
+.action-buttons {
+  display: flex;
+  justify-content: space-between;
+}
+.action-buttons button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30rpx;
+  line-height: 48rpx;
+  padding: 16rpx;
+  width: 250rpx;
+  color: #637782;
+}
+.btn-icon {
+  width: 50rpx;
+  height: 50rpx;
+  margin-right: 16rpx;
+}
