--- a/client/pages/movie-list/movie-list.wxss
+++ b/client/pages/movie-list/movie-list.wxss
@@ -1,1 +1,91 @@
 /* pages/movie-list/movie-list.wxss */
+page {
+  background-color: #EEE;
+
+}
+.search-box {
+  display: flex;
+  height: 48rpx;
+  padding: 8rpx;
+  border: 1rpx solid gray;
+  border-radius: 33rpx;
+  margin: 16rpx;
+}
+
+.search-box:hover {
+  border: 1rpx solid white;
+}
+
+.search-box:focus {
+  border: 1rpx solid white;
+}
+
+.search-box-icon {
+  width: 42rpx;
+  height: 42rpx;
+  flex: 0 1 auto;
+  margin: 0 8rpx;
+}
+
+.search-box-input {
+  width: 100%;
+  color: white;
+  line-height: 42rpx;
+  font-size: 30rpx;
+  padding-left: 32rpx;
+}
+
+.movie-list {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 700rpx;
+   margin: 0 auto; 
+  height: 950rpx;
+}
+
+.movie-item {
+  display: flex;
+  margin: 32rpx 8rpx;
+  border: 1px solid #ccc;
+  background: white;
+  height: 300rpx;
+  overflow: hidden;
+}
+
+.movie-image {
+  min-width: 200rpx;
+  max-width: 200rpx;
+  overflow: hidden;
+  /* width: 200rpx;
+  height: 200rpx;
+  overflow: hidden; */
+}
+
+.movie-info {
+  width: 100%;
+  padding: 16rpx;
+}
+
+.movie-title {
+  margin: 32rpx 0;
+  text-align: center;
+  font-size: 35rpx;
+  line-height: 49rpx;
+}
+
+.movie-category {
+  text-align: center;
+  font-size: 25rpx;
+  line-height: 35rpx;
+  color: #555;
+}
+
+image.bg {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
