--- a/client/pages/comment-add/comment-add.wxml
+++ b/client/pages/comment-add/comment-add.wxml
@@ -1,11 +1,57 @@
 <!--pages/comment-add/comment-add.wxml-->
-<view>
-  <view class="voice" wx:for="{{voiceList}}" style="width: {{item.width * 700}}rpx" bindtap="play" data-voice="{{item}}">{{item.duration}}</view>
-</view>
-<view id="record" class="{{isRecording ? 'recording' : ''}}" bindtouchstart="touchStart" bindtouchcancel="touchCancel" bindtouchend="touchEnd" bindtouchmove="touchMove">{{isRecording ? '松开 结束' : '按住 说话'}}</view>
-<view class="record-indicator" wx:if="{{isRecording}}">
-
-  <view class="record-indicator-text {{isCancelRecording ? 'cancel' : ''}}">
-    {{isCancelRecording ? '手指松开 取消发送' : '手指上划 取消发送'}}
+<view wx:if="{{!userInfo}}">
+  <view class="unlogin-card">
+    <view class="unlogin-head"></view>
+    <view class="unlogin-info">
+      <view class="unlogin-text">未登录</view>
+      <view class="unlogin-tips">点击微信登录后才可添加评论</view>
+    </view>
   </view>
+  <button class="unlogin-btn" open-type="getUserInfo" bindgetuserinfo="onTapLogin">微信登录</button>
+</view>
+<view wx:if="{{userInfo}}">
+  <view class="record-indicator" wx:if="{{isRecording}}">
+    <image class="record-indicator-icon" mode="widthFix" src="{{isCancelRecording ? '../../images/back-white.png' : '../../images/voice-white.png'}}"></image>
+    <view class="record-indicator-text {{isCancelRecording ? 'cancel' : ''}}">
+      {{isCancelRecording ? '手指松开 取消发送' : '手指上划 取消发送'}}
+    </view>
+  </view>
+  <view class="movie-wrapper" style="height: {{containerHeight}}rpx">
+    <view class="movie-info">
+      <image class="movie-image" src="{{movie.image}}"></image>
+      <view class="movie-title">{{movie.title}}</view>
+    </view>
+          <!-- 评论区域 -->
+      <view class="comment-info">
+       <view  class="comment-tips">请输入你的影评内容...</view>
+        <!-- 文字评论 -->
+        <block wx:if="{{commentType === 0}}" class="text-comment">
+          <textarea class="content-textarea" auto-focus maxlength="{{textMaxLength}}" bindinput="onInput"></textarea>
+          <view class="content-counter">{{text.length}}/{{textMaxLength}}</view>
+          
+        </block>
+        <!-- 语音评论 -->
+        <block wx:if="{{commentType === 1}}">
+         
+          <view class="voice" wx:if="{{voice}}" style="width: {{voice.width}}rpx" bindtap="playOrStop" data-voice="{{voice}}">
+            <image class="voice-icon" src="../../images/{{isPlaying ? 'stop' : 'play'}}.png"></image>
+            <view class="voice-duration">{{voice.durationText}}</view>
+
+          </view>
+
+          <!-- 录音按钮 -->
+          <view class="action-buttons">
+            <view id="record" class="{{isRecording ? 'recording' : ''}}" bindtouchstart="touchStart" bindtouchcancel="touchCancel" bindtouchend="touchEnd" bindtouchmove="touchMove">
+              <image class="record-icon" src="../../images/voice.png"></image>
+              <view class="record-text">{{isRecording ? '松开 结束' : '按住 说话'}}</view>
+            </view>
+          </view>
+        </block>
+      </view>
+
+  </view>
+
+  <button class="btn-finish" disabled="{{!voice && !text.length}}" bindtap="preview">
+    完成
+  </button>
 </view>
