--- a/client/pages/comment-add/comment-add.wxss
+++ b/client/pages/comment-add/comment-add.wxss
@@ -1,25 +1,71 @@
 /* pages/comment-add/comment-add.wxss */
-#record {
+
+.comment-tips {
+  font-size: 30rpx;
+  line-height: 60rpx;
+  text-align: center;
+  color: #637782;
+}
+
+.action-buttons {
   position: absolute;
   left: 0;
-  bottom: 0;
   right: 0;
+  bottom: 0; 
+  text-align: center;
+}
+
+.content-textarea {
+  border: 1px solid gray;
+  border-radius: 8rpx;
+  padding: 8rpx;
+  width: 90%; 
+  margin: auto;
+  font-size: 30rpx;
+  line-height: 60rpx;
+}
+
+.content-counter {
+  margin-top: 16rpx;
+  margin-right: 16rpx; 
+  text-align: right;
+  font-size: 20rpx;
+  line-height: 28rpx;
+  color: darkgray;
+}
+
+#record {
+  display: flex;
+  justify-content: center;
+  width: 400rpx;
   text-align: center;
   padding: 16rpx;
-  margin: 64rpx;
-  background-color: #eee;
+  margin: 64rpx auto;
   border: 1rpx solid #aaa;
   border-radius: 16rpx;
+  background-color: white;
+}
+
+#record.recording {
+  background-color: #ccc;
+}
+
+#record .record-icon {
+  width: 50rpx;
+  height: 50rpx;
+  margin-right: 16rpx;
 }
 
 .record-indicator {
-  position: relative;
+  position: absolute;
   top: 200rpx; 
   left: 200rpx; 
   width: 350rpx;
   height: 350rpx;
   background-color: rgba(0, 0, 0, 0.7);
   border-radius: 16rpx;
+  text-align: center;
+  z-index: 100;
 }
 
 .record-indicator-text {
@@ -35,22 +81,26 @@
   line-height: 42rpx;
 }
 
+.record-indicator-icon {
+  width: 200rpx;
+  margin: 50rpx;
+  
+}
+
 .record-indicator-text.cancel {
   background-color: rgba(255, 0, 0, 0.5);
 }
 
-#record.recording {
-  background-color: #ccc;
+button.btn-finish {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  color: white;
+  background-color: #1cb977;
+  border-radius: 0;
 }
 
-.voice {
-  border: 1rpx solid green;
-  border-radius: 8rpx;
-  background-color: greenyellow;
-  font-size: 20rpx;
-  line-height: 28rpx;
-  min-width: 100rpx;
-  max-width: 700rpx;
-  height: 60rpx;
-  margin: 32rpx;
+button.btn-finish::after {
+  border: none;
 }
