--- a/client/pages/comment-list/comment-list.wxml
+++ b/client/pages/comment-list/comment-list.wxml
@@ -7,8 +7,10 @@
       <view class="content">{{comment.content}}</view>
       <view class="date">{{comment.date}}</view>
     </view>
-
-    <view class="actions">
+    <view wx:if="{{!userInfo}}" class="actions">
+      <view class="login-tips">登陆后才可收藏和点赞</view>
+    </view>
+    <view wx:if="{{userInfo}}" class="actions">
       <!-- 点赞 -->
       <view class="action-wrapper" bindtap="like" data-comment="{{comment}}">
         <view class="like-icon">
@@ -30,3 +32,7 @@
 
 
 </view>
+
+<button wx:if="{{!userInfo}}" class="wx-green"  open-type="getUserInfo" bindgetuserinfo="onTapLogin">
+  微信登录
+</button>
