--- a/client/pages/movie-detail/movie-detail.wxss
+++ b/client/pages/movie-detail/movie-detail.wxss
@@ -1,5 +1,5 @@
 /* pages/movie-detail/movie-detail.wxss */
-.movie-wrapper {
+/* .movie-wrapper {
   position: relative; 
   margin: 128rpx 32rpx 64rpx;
   background: #eee;
@@ -25,7 +25,7 @@
   text-align: center;
   font-size: 40rpx;
   line-height: 56rpx;
-}
+} */
 
 .movie-description {
   margin: 32rpx 0;
@@ -33,10 +33,9 @@
   line-height: 60rpx;
   text-align: start;
   color: #637782;
-
-
 }
-.action-buttons {
+
+/* .action-buttons {
   display: flex;
   justify-content: space-between;
 }
@@ -54,4 +53,4 @@
   width: 50rpx;
   height: 50rpx;
   margin-right: 16rpx;
-}
+} */
