--- a/client/pages/comment-list/comment-list.wxss
+++ b/client/pages/comment-list/comment-list.wxss
@@ -1,4 +1,8 @@
 /* pages/comment-list/comment-list.wxss */
+
+.comment-list {
+  margin-bottom: 100rpx;
+}
 .comment-wrapper {
   position: relative;
   display: flex;
