--- a/client/app.wxss
+++ b/client/app.wxss
@@ -33,6 +33,14 @@ page {
   line-height: 56rpx;
 }
 
+.comment-rating {
+  text-align: center;
+}
+
+.comment-rating rating {
+  display: inline-block;
+}
+
 .action-buttons {
   display: flex;
   justify-content: space-between;
@@ -131,4 +139,30 @@ page {
   width: 40rpx;
   height: 40rpx;
   margin-right: 10rpx;
+}
+
+/* 列表为空的时候显示的卡片样式 */
+.empty-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 37rpx 27rpx;
+  height: 431rpx;
+  background: #FFFFFF;
+  box-shadow: 0 2rpx 13rpx 5rpx rgba(0, 0, 0, 0.02);
+  border-radius: 13rpx;
+}
+
+.empty-image {
+  margin-bottom: 29rpx;
+  width: 90rpx;
+  height: 90rpx;
+  opacity: 0.4;
+}
+
+.empty-text {
+  font-size: 28rpx;
+  line-height: 40rpx;
+  color: rgba(139, 139, 139, 0.8);
 }
