--- a/client/pages/movie-detail/movie-detail.wxml
+++ b/client/pages/movie-detail/movie-detail.wxml
@@ -1,8 +1,28 @@
 <!--pages/movie-detail/movie-detail.wxml-->
 <view class="movie-wrapper">
   <view class="movie-info">
-    <image class="movie-image" mode="aspectFill"  src="{{movie.image}}"></image>
+    <image class="movie-image" mode="aspectFill" src="{{movie.image}}"></image>
     <view class="movie-title">{{movie.title}}</view>
+    <view class="movie-rating">
+      <view class="rating-info">
+        <view class="rating-tips">侃侃评分</view>
+        <view class="rating-score">{{movie.avgRating}}/5.0</view>
+        <view class="rating-count">共{{movie.totalCount}}人评价</view>
+      </view>
+
+      <view class="rating-detail">
+        <view class="bar-wrapper" wx:for="{{movie.ratings}}" wx:key="score">
+          <view class="bar-tips">{{item.score}}星</view>
+          <view class="bar" style="width: {{item.count / movie.totalCount * 250}}rpx"></view>
+          <view>{{item.ratio}}%</view>
+        </view>
+        <!-- <view>4星<view class="bar"></view>20.00%</view>
+        <view>3星<view class="bar"></view>20.00%</view>
+        <view>2星<view class="bar"></view>20.00%</view>
+        <view>1星<view class="bar"></view>20.00%</view> -->
+
+      </view>
+    </view>
     <view class="movie-description">{{movie.description}}</view>
   </view>
   <view class="action-buttons">
