--- a/client/pages/user/user.wxml
+++ b/client/pages/user/user.wxml
@@ -1,2 +1,25 @@
 <!--pages/user/user.wxml-->
-<text>pages/user/user.wxml</text>
+<view class="tab-wrapper">
+  <view class="tab-item">我的影评</view>
+  <view class="tab-item">我的收藏</view>
+</view>
+<view class="empty-card">
+  <image class="empty-image" src="../../images/user.png"></image>
+  <view class="empty-text">还没有发布影评</view>
+  <view class="empty-text">快去尝试发布影评吧～</view>
+</view>
+<view class="comment-list">
+  <comment-card image-src="../../images/user.png">
+      <view slot="card-actions"  class="card-actions">
+        <button class="delete">删除</button>
+    </view>
+  </comment-card>
+
+    <comment-card image-src="../../images/user.png">
+      <view slot="card-actions"  class="card-actions">
+        <button class="fave">取消收藏</button>
+    </view>
+  </comment-card>
+</view>
+
+<view class="comment-list"></view>
