--- a/client/pages/user/user.wxss
+++ b/client/pages/user/user.wxss
@@ -1,1 +1,51 @@
 /* pages/user/user.wxss */
+.tab-wrapper {
+  display: flex;
+  justify-content: space-around;
+  padding: 32rpx 0;
+  
+}
+
+.tab-item {
+  font-size: 35rpx;
+  line-height: 49rpx;
+  color: darkgray;
+}
+
+.tab-item.active {
+  color: orange;
+}
+
+.comment-card {
+  display: flex;
+  width: 650rpx;
+  height: 350rpx;
+  background: white;
+  border-radius: 16rpx;
+  box-shadow: 0 10rpx 40rpx 0 rgba(0,0,0,.19); 
+  margin: 0 auto;
+}
+
+.card-actions {
+  display: flex;
+  justify-content: flex-end;
+}
+.card-actions button {
+  margin: 10rpx;
+  height: 50rpx;
+  font-size: 25rpx;
+  line-height: 50rpx;
+}
+
+button.delete {
+  width: 150rpx;
+  color: red;
+}
+
+button.fave {
+  width: 200rpx;
+  color: orange;
+}
+
+
+
