--- a/client/components/card/card.wxss
+++ b/client/components/card/card.wxss
@@ -9,7 +9,8 @@
   height: 100%;
   background: white;
   border-radius: 16rpx;
-  box-shadow: 0 10rpx 40rpx 0 rgba(0,0,0,.19); 
+  box-shadow: 0 10rpx 40rpx 0 rgba(0,0,0,.19);
+  overflow: hidden;
 }
 
 .content-container {
