--- a/client/pages/comment-add/comment-add.wxml
+++ b/client/pages/comment-add/comment-add.wxml
@@ -1,15 +1,6 @@
 <!--pages/comment-add/comment-add.wxml-->
-<view wx:if="{{!userInfo}}">
-  <view class="unlogin-card">
-    <view class="unlogin-head"></view>
-    <view class="unlogin-info">
-      <view class="unlogin-text">未登录</view>
-      <view class="unlogin-tips">点击微信登录后才可添加评论</view>
-    </view>
-  </view>
-  <button class="unlogin-btn" open-type="getUserInfo" bindgetuserinfo="onTapLogin">微信登录</button>
-</view>
-<view wx:if="{{userInfo}}">
+<login wx:if="{{!userInfo}}"  bind:login="onTapLogin" tips="点击微信登录后才可添加评论"></login>
+<view wx:else>
   <view class="record-indicator" wx:if="{{isRecording}}">
     <image class="record-indicator-icon" mode="widthFix" src="{{isCancelRecording ? '../../images/back-white.png' : '../../images/voice-white.png'}}"></image>
     <view class="record-indicator-text {{isCancelRecording ? 'cancel' : ''}}">
