将所有播放音频的地方替换成了audio-player组件

--- a/client/app.wxss
+++ b/client/app.wxss
@@ -3,6 +3,10 @@ page {
   background-color: #eee;
 }
 
+empty-tips-card {
+  margin: 37rpx 27rpx;
+}
+
 .wx-green {
   background-color: #1cb977;
 }
