--- a/client/pages/user/user.wxml
+++ b/client/pages/user/user.wxml
@@ -15,13 +15,12 @@
     <view class="comment-list" wx:else>
       <comment-card
         data-comment="{{comment}}"
-        is-playing="{{isPlaying && currentPlayingCommentId === comment.id}}"
-        bind:tapplayer="playOrStop"
+        bind:tapplayer="tapPlayer"
         image-src="../../images/user.png" wx:for="{{myPublishedComments}}" wx:key="id" wx:for-item="comment"
         comment="{{comment}}">
-        <view slot="card-actions" class="card-actions">
+        <!-- <view slot="card-actions" class="card-actions">
           <button class="delete">删除</button>
-        </view>
+        </view> -->
       </comment-card>
     </view>
   </view>
@@ -34,13 +33,12 @@
     <view wx:else class="comment-list">
       <comment-card
         data-comment="{{comment}}"
-        is-playing="{{isPlaying && currentPlayingCommentId === comment.id}}"
-        bind:tapplayer="playOrStop"
+        bind:tapplayer="tapPlayer"
         wx:for="{{myFaveComments}}" wx:key="id" wx:for-item="comment"
         image-src="../../images/user.png"
         comment="{{comment}}">
         <view slot="card-actions" class="card-actions">
-          <button class="fave">取消收藏</button>
+          <button class="fave" catchtap="unFave" data-comment="{{comment}}">取消收藏</button>
         </view>
       </comment-card>
     </view>
